# slack-auto-suggestions-plugin

./: README.md  run.sh
api-server/: .gitignore  ai_context_builder.py  api_server.py  concurrency_manager.py  context_builder.py  docling_document_processor.py  hierarchy_manager.py  intelligent_prompt_generator.py  intelligent_suggestion_engine.py  knowledge_graph.py  main.py  memory_optimizer.py  metrics_monitor.py  prompt_generator.py  prompt_templates.py  pyproject.toml  requirements.txt  search_engine.py  semantic_search_engine.py  suggestion_engine.py  test_api_endpoints.py  vector_manager.py
api-server/agent/: llm_agent_manager.py
api-server/agent/providers/: __init__.py  claude_api_client.py  llm_provider_interface.py  local_ollama_client.py  openai_api_client.py  openrouter_gateway_client.py  provider_configuration_manager.py
slack-robot-extension/: CLEAN_ARCHITECTURE.md  MESSAGE_CAPTURE_RESTORED.md  README.md  TROUBLESHOOTING.md  UPDATE_GUIDE.md  background-enhanced.js  background-minimal.js  background.js  background.js.backup  debug-ui.js  manifest-minimal.json  manifest.json.backup
slack-robot-extension/content/: slack-message-capture.js  slack-robot-enhanced.js  slack-robot.css  slack-robot.js
slack-robot-extension/icons/: create_base64_icons.js  create_icons.html  create_icons.py
