[project]
name = "slack-robot-api-server"
version = "0.1.0"
description = "AI-powered Slack assistant API server with Docling document processing"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "python-multipart==0.0.18",
    "sqlalchemy==2.0.36",
    "aiosqlite==0.19.0",
    # Vector Database and Document Processing
    "chromadb",
    "docling",
    "sentence-transformers>=2.3.0",
    "torch>=2.0.0",
    "numpy<2.0,>=1.24.0",
    "huggingface-hub>=0.16.4",
    # System monitoring and utilities
    "psutil>=5.9.0",
    "requests>=2.31.0",
    "pyyaml>=6.0",
    # Knowledge graph and ML dependencies
    "networkx>=3.0",
    "scikit-learn>=1.3.0",
    "spacy>=3.7.0",
    "pandas>=2.0.0",
    # Optional visualization
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    # LLM Provider Dependencies
    "openai>=1.7.1",
    "anthropic>=0.21.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
